# metacritic-games-scrape

./: .gitignore  LICENSE  README.md  constants.py  pyproject.toml  scrapy.cfg
.github/workflows/: ci.yaml
metacritic_games_scrape/: items.py  middlewares.py  pipelines.py  settings.py
metacritic_games_scrape/spiders/: metacritic_games_spider.py
post_scrape/: clean_data_validation.ipynb  clean_json.py  fig_1.ipynb  fig_2.ipynb  fig_3.ipynb  fig_4.ipynb  load_scrape_data.py  nlp_utils.py  table_2.py  tables_2_3_4_fig_5_pretty.ipynb  tables_3_4_fig_5.ipynb
