[tool.poetry]
name = "metacritic-games-scrape"
version = "1.0.0"
description = "scrape metacritic.com for games w/ metascore"
authors = ["atloo1"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.scrape.dependencies]
scrapy = "^2.11.0"
scrapy-user-agents = "^0.1.1"

[tool.poetry.group.analyze.dependencies]
jupyter = "^1.0.0"
pandas = "^2.1.3"
plotly = "^5.18.0"
spacy = "^3.7.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
