[tool.poetry]
name = "metacritic-games-scrape"
version = "1.1.2"
description = "scrape games on metacritic.com"
authors = ["atloo1 <15357562+atloo1@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.scrape.dependencies]
scrapy = "^2.11.0"
scrapy-user-agents = "^0.1.1"

[tool.poetry.group.analyze.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
spacy = "^3.7.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pre-commit = "^4.0.1"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]  # sort imports

[tool.ruff.format]
quote-style = "single"
